# ClawLite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAWLITE_PROJECT_SUMMARY.md  CODEX_CONTEXT.md  CONTRIBUTING.md  Dockerfile  IDENTITY.md  LICENSE  MEMORY.md  README.md  ROADMAP.md  SECURITY.md  SOUL.md  SYNC_REPORT.md  USER.md  conftest.py  docker-compose.env.example  docker-compose.yml  pyproject.toml  requirements.txt  test_import.py  traceback.txt  verify_sprint4.py
.github/: pull_request_template.md
.planning/: PROJECT.md  STATE.md
clawlite/: __init__.py  auth.py  cli.py  configure_menu.py  mcp.py  mcp_server.py  onboarding.py  selfdoc.py
docs/: AI_UPDATE_DEPLOY_RUNBOOK.md  API.md  ARCHITECTURE.md  AUDIT_CLAWLITE_vs_OPENCLAW_2026-02-27.md  AUDIT_CLAWLITE_vs_OPENCLAW_2026-02-28_UPDATE.md  AUTONOMY_PHASE2_EXPLORER_DECISIONS.md  BETA_RELEASE_CHECKLIST.md  COMMUNITY_AUTOMATION.md  COMPETITIVE_ANALYSIS_2026-02-27.md  CONFIGURATION.md  CONFIGURE_UX_PTBR.md  DASHBOARD.md  DOCKER.md  HANDOFF_CLAUDE_TO_BARRETOCLAW.md  HUB_MARKETPLACE_API.md  MCP.md  MULTIAGENTE_MULTICANAL_PTBR.md  OPERATIONS.md  OUTBOUND_FAILURE_RECOVERY_RUNBOOK.md  PRODUCTION_DAY1.md  PROMPT_ARCHITECTURE.md  QUALITY_GATE.md  QUICKSTART.md  README.md  REDDIT_INTEGRATION.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASING.md  ROBUSTNESS_SCORECARD.md  RUNBOOK.md  SELF.md  SESSION_MEMORY.md  SKILLS.md  SKILLS_OPENCLAW_COMPAT.md  SKILL_PORT_MATRIX.md  STATUS.md  SYNC_AUTOMATION.md  (+21 more)
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+593 files in other folders)
