[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawlite"
version = "0.4.1"
description = "Portable agentic assistant for Linux and Termux"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "BarretoClaw"}]
dependencies = ["fastapi>=0.112", "uvicorn>=0.30", "questionary>=2.0.1", "rich>=13.7.1", "httpx>=0.27", "duckduckgo-search>=6.0.0", "beautifulsoup4>=4.12.0"]

[project.scripts]
clawlite = "clawlite.cli:main"

[tool.setuptools.packages.find]
include = ["clawlite*"]

[tool.setuptools.package-data]
clawlite = ["gateway/dashboard.html"]
